workspace_folder/log/build_2020-10-22_08-13-22/py_trees_ros_tutorials/stderr.log
  File "/root/workspace_folder/install/py_trees_ros_tutorials/lib/python3.8/site-packages/py_trees_ros_tutorials/two_battery_check.py", line 88
    import from sensor_msgs.msg import Range
           ^
SyntaxError: invalid syntax

